# python-selenium

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  pylenium.json  pyproject.toml
sauce/: login.py
tests/: test_1_login.py  test_1_sauce_demo.py
